--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+:root {
+  --main-color: #6c63ff;
+  --secondary-color: #ff6584;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.highlighted-text {
+  color: var(--main-color);
 }
 
-.App-header {
-  background-color: #282c34;
+.secondary-highlighted-text {
+  color: var(--secondary-color);
+}
+
+#easter-1 {
+  cursor: pointer;
+}
+
+#app {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.bg-dark,
+.bg-light,
+h1 {
+  transition: all 1s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card {
+  opacity: 80%;
+  transition: 1s ease;
+}
+
+.card:hover {
+  opacity: 100%;
+}
+
+.con {
+  animation: drop 1s ease;
+  margin-top: 3.5vh;
+}
+
+@keyframes drop {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
