added links to the cards in the portfolio

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,12 @@ h1 {
   opacity: 80%;
   transition: 1s ease;
   border: 1px solid var(--main-color);
+  
 }
 
 .card:hover {
   opacity: 100%;
+  cursor: pointer;
 }
 
 .con {
